--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@nestjs/swagger": "^7.3.1",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
+    "escpos": "^3.0.0-alpha.6",
     "mongoose": "^8.4.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "usb": "^2.16.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
